--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,74 @@ nav ul li .sm-link {
   margin-bottom: 5px;
 }
 
+.btn.book-tour {
+  background-color: #ff6b6b;
+  border-radius: 25px;
+  padding: 13px 50px;
+  color: #fff !important;
+  border: 1px solid #fb5252;
+  margin: 45px 0px;
+}
+
+.slide {
+  position: relative;
+}
+
+.slide .slider-text {
+  position: absolute;
+  top: 60%;
+  left: 40%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.slide .slider-text h2 {
+  font-size: 55px;
+}
+
+.slide .slider-text p {
+  font-size: 18px;
+  width: 70%;
+}
+
+.slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 3rem 0;
+  list-style-type: none;
+}
+
+.slick-dots li {
+  margin: 0 0.25rem;
+}
+
+.slick-dots li button {
+  background-color: rgba(255, 255, 255, 0.3);
+  width: 15px;
+  height: 15px;
+}
+
+.slick-dots button {
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  padding: 0;
+  border: none;
+  border-radius: 100%;
+  background-color: #fff;
+  text-indent: -9999px;
+}
+
+.slick-dots li.slick-active button {
+  background-color: #fff;
+}
+
 @media (min-width: 768px) {
   nav .nav-toggle {
     display: none;
