--- a/css/style.scss
+++ b/css/style.scss
@@ -200,6 +200,72 @@ nav {
     border: 1px solid button-props(border-color);
     margin-bottom: 5px;
   }
+
+  &.book-tour {
+    background-color: button-props(bg-color);
+    border-radius: 25px;
+    padding: 13px 50px;
+    color: #fff !important;
+    border: 1px solid button-props(border-color);
+    margin: 45px 0px;
+  }
+}
+
+// slider
+
+.slide {
+  .slider-text {
+    position: absolute;
+    top: 60%;
+    left: 40%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: white;
+
+    h2 {
+      font-size: 55px;
+    }
+
+    p {
+      font-size: 18px;
+      width: 70%;
+    }
+  }
+
+  position: relative;
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 3rem 0;
+  list-style-type: none;
+
+  li {
+    margin: 0 0.25rem;
+
+    button {
+      background-color: rgba(255, 255, 255, 0.3);
+      width: 15px;
+      height: 15px;
+    }
+  }
+
+  button {
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    padding: 0;
+    border: none;
+    border-radius: 100%;
+    background-color: #fff;
+    text-indent: -9999px;
+  }
+
+  li.slick-active button {
+    background-color: #fff;
+  }
 }
 
 // media queries
