--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,11 @@ body a {
   text-decoration: none;
 }
 
-body a:hover, body a:focus, body a:active, body a:visited {
+body a:focus, body a:active, body a:visited {
+  color: #fff;
+}
+
+body a:hover {
   color: #ff6b6b;
 }
 
@@ -96,6 +100,7 @@ nav a {
 nav a:hover, nav a:focus, nav a:active, nav a:visited {
   text-decoration: none;
   margin: 12px;
+  color: #ff6b6b;
 }
 
 nav .brand {
@@ -135,6 +140,10 @@ nav ul li a {
   color: #fff;
   display: block;
   padding: 0.75em;
+}
+
+nav ul li i.fa {
+  margin-right: 5px;
 }
 
 nav ul li .sm-link {
@@ -177,6 +186,46 @@ nav ul li .sm-link {
   color: #fff !important;
   border: 1px solid #fb5252;
   margin: 45px 0px;
+}
+
+.btn.get-in-touch {
+  background-color: transparent;
+  border-radius: 25px;
+  padding: 10px 17px;
+  color: #fff !important;
+  border: 3px solid #fff;
+  margin: 25px;
+}
+
+.btn.get-in-touch:hover {
+  background-color: #ff6b6b;
+  border: 3px solid #fff;
+}
+
+.btn:hover {
+  background-color: #ff4c4c;
+}
+
+.slider .col-3,
+.why-us .col-3 {
+  margin: 3em auto;
+  width: 100%;
+}
+
+.testimonial .col-3,
+.slider .col-3,
+.why-us .col-3 {
+  float: left;
+  margin: 2em 5% 0 0;
+  padding: 0 1em;
+  width: 30%;
+}
+
+.testimonial .col-3:last-of-type,
+.slider .col-3:last-of-type,
+.why-us .col-3:last-of-type,
+.featured .col-4:last-of-type {
+  margin-right: 0;
 }
 
 .slide {
@@ -236,6 +285,276 @@ nav ul li .sm-link {
 
 .slick-dots li.slick-active button {
   background-color: #fff;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+}
+
+.slick-track:before {
+  display: table;
+  content: "";
+}
+
+.slick-track:after {
+  display: table;
+  content: "";
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  outline: none;
+}
+
+[dir="rtl"] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+.best-tours .container,
+.our-partners .container,
+.slider .container,
+.why-us .container,
+.featured .container,
+.testimonial .container,
+.contact .container {
+  padding: 5em 0;
+}
+
+.best-tours,
+.slider,
+.why-us,
+.featured,
+.our-partners,
+.testimonial,
+.contact {
+  text-align: center;
+}
+
+.best-tours {
+  background-color: #e74c3c;
+  background: url("../assets/bg.png") no-repeat center;
+  color: #fff;
+  height: 30em;
+}
+
+.best-tours .container {
+  padding-top: 160px;
+}
+
+.best-tours a {
+  color: #fff;
+}
+
+.best-tours a:hover, .best-tours a:focus, .best-tours a:active, .best-tours a:visited {
+  color: #fff;
+}
+
+.featured img {
+  display: block;
+  margin: 0 auto 1em;
+  max-width: 100%;
+}
+
+.featured .col-4 {
+  margin: 3em auto;
+  width: 100%;
+}
+
+.featured .container p {
+  color: #9b9b9b;
+  font-size: 0.87em;
+}
+
+.featured .container .col-4 h3 {
+  font-weight: 500;
+  font-size: 1.09em;
+  margin: 0;
+  color: #545454;
+}
+
+.featured .container .col-4 p {
+  color: #9b9b9b;
+  font-size: 0.77em;
+}
+
+.featured .col-4 {
+  float: left;
+  margin: 2em 2% 0 0;
+  width: 20%;
+}
+
+.our-partners {
+  background-color: #f5f5f5;
+  color: #545454;
+}
+
+.footer {
+  background-color: #212121;
+  color: #fff;
+  font-size: 1.5em;
+  text-align: right;
+}
+
+.footer .container {
+  padding: 1em 0;
+}
+
+.footer a {
+  color: #fff;
+  margin-right: 0.4em;
+}
+
+.footer a:last-of-type {
+  margin-right: 0;
+}
+
+.social-icon {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+  padding: 0px;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 2em;
+  border-radius: 25px;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  background-color: #2e2e2e;
+}
+
+footer .brand {
+  display: block;
+  float: left;
+  width: 225px;
+  margin-left: 15%;
+}
+
+footer .brand a {
+  color: #444;
+  display: block;
+  padding: 0.82em 0 0 25px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  margin: 10% auto;
+  width: 60%;
+  -webkit-box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+          box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+  -webkit-animation-name: modalopen;
+          animation-name: modalopen;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+.modal-header h2,
+.modal-footer h3 {
+  margin: 0;
+}
+
+.modal-header {
+  background: #212121;
+  padding: 30px 60px;
+  color: #fff;
+}
+
+.modal-body {
+  padding: 50px 60px;
+  background: #fff;
+}
+
+.close {
+  color: #ccc;
+  float: right;
+  font-size: 30px;
+  color: #fff;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
