--- a/css/style.scss
+++ b/css/style.scss
@@ -7,12 +7,20 @@ $seconday-font-color: #545454;
 
 // functions
 
-@function button-props($props) {
+@function buttonProps($props) {
   $props-btn: (
     border-color: #fb5252,
     bg-color: #ff6b6b
   );
   @return map-get($props-btn, $props);
+}
+
+@function modalProps($props) {
+  $props-modal: (
+    modal-duration: 1s,
+    modal-color: #212121
+  );
+  @return map-get($props-modal, $props);
 }
 
 // Utilities
@@ -78,13 +86,16 @@ body {
   }
 
   a {
-    color: button-props(bg-color);
+    color: buttonProps(bg-color);
     text-decoration: none;
-    &:hover,
+
     &:focus,
     &:active,
     &:visited {
-      color: button-props(bg-color);
+      color: #fff;
+    }
+    &:hover {
+      color: buttonProps(bg-color);
     }
   }
 }
@@ -124,6 +135,7 @@ nav {
     &:visited {
       text-decoration: none;
       margin: 12px;
+      color: buttonProps(bg-color);
     }
   }
 
@@ -163,6 +175,9 @@ nav {
         display: block;
         padding: 0.75em;
       }
+      i.fa {
+        margin-right: 5px;
+      }
 
       .sm-link {
         font-size: 0.8em;
@@ -193,22 +208,60 @@ nav {
   background-image: none;
 
   &.book-now {
-    background-color: button-props(bg-color);
+    background-color: buttonProps(bg-color);
     border-radius: 25px;
     padding: 10px 17px;
     color: #fff !important;
-    border: 1px solid button-props(border-color);
+    border: 1px solid buttonProps(border-color);
     margin-bottom: 5px;
   }
 
   &.book-tour {
-    background-color: button-props(bg-color);
+    background-color: buttonProps(bg-color);
     border-radius: 25px;
     padding: 13px 50px;
     color: #fff !important;
-    border: 1px solid button-props(border-color);
+    border: 1px solid buttonProps(border-color);
     margin: 45px 0px;
   }
+
+  &.get-in-touch {
+    background-color: transparent;
+    border-radius: 25px;
+    padding: 10px 17px;
+    color: #fff !important;
+    border: 3px solid #fff;
+    margin: 25px;
+  }
+  &.get-in-touch:hover {
+    background-color: buttonProps(bg-color);
+    border: 3px solid #fff;
+  }
+}
+.btn:hover {
+  background-color: darken(buttonProps(bg-color), 6%);
+}
+
+.slider .col-3,
+.why-us .col-3 {
+  margin: 3em auto;
+  width: 100%;
+}
+
+.testimonial .col-3,
+.slider .col-3,
+.why-us .col-3 {
+  float: left;
+  margin: 2em 5% 0 0;
+  padding: 0 1em;
+  width: 30%;
+}
+
+.testimonial .col-3:last-of-type,
+.slider .col-3:last-of-type,
+.why-us .col-3:last-of-type,
+.featured .col-4:last-of-type {
+  margin-right: 0;
 }
 
 // slider
@@ -266,6 +319,295 @@ nav {
   li.slick-active button {
     background-color: #fff;
   }
+}
+
+//slick
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+
+  &:focus {
+    outline: none;
+  }
+
+  &.dragging {
+    cursor: pointer;
+    cursor: hand;
+  }
+}
+
+.slick-slider {
+  .slick-track,
+  .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+
+  &:before {
+    display: table;
+    content: "";
+  }
+
+  &:after {
+    display: table;
+    content: "";
+    clear: both;
+  }
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  outline: none;
+}
+
+[dir="rtl"] .slick-slide {
+  float: right;
+}
+
+.slick-slide {
+  img {
+    display: block;
+  }
+
+  &.slick-loading img {
+    display: none;
+  }
+
+  &.dragging img {
+    pointer-events: none;
+  }
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+.best-tours .container,
+.our-partners .container,
+.slider .container,
+.why-us .container,
+.featured .container,
+.testimonial .container,
+.contact .container {
+  padding: 5em 0;
+}
+
+.best-tours,
+.slider,
+.why-us,
+.featured,
+.our-partners,
+.testimonial,
+.contact {
+  text-align: center;
+}
+
+.best-tours {
+  background-color: #e74c3c;
+  background: url("../assets/bg.png") no-repeat center;
+  color: #fff;
+  height: 30em;
+
+  .container {
+    padding-top: 160px;
+  }
+
+  a {
+    color: #fff;
+
+    &:hover,
+    &:focus,
+    &:active,
+    &:visited {
+      color: #fff;
+    }
+  }
+}
+
+.featured img {
+  display: block;
+  margin: 0 auto 1em;
+  max-width: 100%;
+}
+
+.featured {
+  .col-4 {
+    margin: 3em auto;
+    width: 100%;
+  }
+
+  .container {
+    p {
+      color: #9b9b9b;
+      font-size: 0.87em;
+    }
+
+    .col-4 {
+      h3 {
+        font-weight: 500;
+        font-size: 1.09em;
+        margin: 0;
+        color: $seconday-font-color;
+      }
+
+      p {
+        color: #9b9b9b;
+        font-size: 0.77em;
+      }
+    }
+  }
+}
+
+.featured .col-4 {
+  float: left;
+  margin: 2em 2% 0 0;
+  width: 20%;
+}
+
+.our-partners {
+  background-color: #f5f5f5;
+  color: #545454;
+}
+
+// footer
+
+.footer {
+  background-color: #212121;
+  color: #fff;
+  font-size: 1.5em;
+  text-align: right;
+
+  .container {
+    padding: 1em 0;
+  }
+
+  a {
+    color: #fff;
+    margin-right: 0.4em;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
+  }
+}
+
+.social-icon {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+  padding: 0px;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 2em;
+  border-radius: 25px;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  background-color: #2e2e2e;
+}
+
+footer .brand {
+  display: block;
+  float: left;
+  width: 225px;
+  margin-left: 15%;
+
+  a {
+    color: #444;
+    display: block;
+    padding: 0.82em 0 0 25px;
+  }
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  margin: 10% auto;
+  width: 60%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+  animation-name: modalopen;
+  animation-duration: modalProps(modal-duration);
+}
+
+.modal-header h2,
+.modal-footer h3 {
+  margin: 0;
+}
+
+.modal-header {
+  background: modalProps(modal-color);
+  padding: 30px 60px;
+  color: #fff;
+}
+
+.modal-body {
+  padding: 50px 60px;
+  background: #fff;
+}
+
+.close {
+  color: #ccc;
+  float: right;
+  font-size: 30px;
+  color: #fff;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.contact form {
 }
 
 // media queries
