--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,15 @@ nav ul li .sm-link {
   border: 3px solid #fff;
 }
 
+.btn.get-in-touch-client {
+  background-color: #ff6b6b;
+  border-radius: 25px;
+  padding: 13px 50px;
+  color: #fff !important;
+  border: 1px solid #fb5252;
+  margin: 0px 0px 40px 0px;
+}
+
 .btn:hover {
   background-color: #ff4c4c;
 }
@@ -457,6 +466,25 @@ nav ul li .sm-link {
 .our-partners {
   background-color: #f5f5f5;
   color: #545454;
+}
+
+.testimonial img {
+  max-width: 500px;
+  padding-bottom: 30px;
+}
+
+.testimonial span {
+  color: #9b9b9b;
+  text-align: left;
+  float: left;
+  font-size: 0.75em;
+  font-weight: 600;
+}
+
+.testimonial p {
+  font-weight: 600;
+  font-size: 14px;
+  text-align: left;
 }
 
 .footer {
